feat: criando controller